--- a/RobotMain/trunk/INSTALL.txt
+++ b/RobotMain/trunk/INSTALL.txt
@@ -1,4 +1,13 @@
-Adjust .classpath:
-	<classpathentry kind="lib" path="C:/Program Files/leJOS NXJ/lib/classes.jar" rootpath="/"/>
+Create file: ".classpath"
+>>-BEGIN-------------------------BEGIN
+<?xml version="1.0" encoding="UTF-8"?>
+<classpath>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Program Files/leJOS NXJ/lib/classes.jar"/>
+	<classpathentry kind="output" path="bin"/>
+</classpath>
+>>-END-----------------------------END
  
- Modify the path so it points to the correct location of classes.jar in your leJOS installation.
+Modify the path so it points to the correct location of classes.jar in your leJOS installation.
+
+Done.
